<resources>
    <string name="app_name">Traffic - One Click Series</string>
    <string name="action_settings">Set Locations</string>
    <string name="action_about">About</string>
    <string name="title_activity_about">About One Click Series</string>
    <string name="title_activity_settings">Settings</string>

    <string name="button_save">Save</string>

    <string name="settings_location_a">Location A</string>
    <string name="settings_location_b">Location B</string>
    <string name="settings_edit_location">Full Address</string>

    <string name="main_text_from">Location A</string>
    <string name="main_text_to">Location B</string>
    <string name="main_text_durationA">Duration [A -> B]</string>
    <string name="main_text_durationB">Duration [B -> A]</string>
    <string name="main_text_address">Set Address</string>

    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
</resources>
