<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:id="@+id/content_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.ezerweb.ocs.traffic.SettingsActivity"
    tools:showIn="@layout/activity_settings">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <TextView
            android:id="@+id/textViewLocationA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_location_a"/>

        <EditText
            android:id="@+id/editText_LocA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPostalAddress"
            android:hint="@string/settings_edit_location"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/textViewLocationA"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/textViewLocationB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_location_b"
            android:layout_marginTop="30dp"
            android:layout_below="@+id/editText_LocA"
            android:layout_alignParentStart="true"/>

        <EditText
            android:id="@+id/editText_LocB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPostalAddress"
            android:hint="Full address"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/textViewLocationB"
            android:layout_alignParentStart="true"/>

        <Button
            android:id="@+id/buttonSave"
            android:text="@string/button_save"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/editText_LocB"
            />
    </LinearLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adViewSetting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id">
    </com.google.android.gms.ads.AdView>

</RelativeLayout>
